tests/ok/inputs/edge_rise.obc
node edge_rise(x: int) returns (y: int)
guarantee G( {y} = {1} => {x} = {1} );
guarantee X(G( {y} = {1} => pre(x) = {0} ));
guarantee X(G( ({x} = {1} and pre(x) = {0}) => {y} = {1} ));
locals
  prev : int;
states
  Init, Run;
init Init
trans
  Init -> Run {
    y := 0;
    prev := x;
  }
  Run -> Run {
    requires {prev} = pre_k(x, 1);
    ensures {prev} = {x};
    if x = 1 and prev = 0 then
      y := 1;
    else
      y := 0;
    end;
    prev := x;
  }
end
