tests/fail/inputs/and2_history.obc
node and2_history(x: int) returns (y: int)
guarantee X(X(G( {y} = {1} => pre_k(x, 1) = {1} and pre_k(x, 2) = {1} )));
guarantee X(X(G( pre_k(x, 1) = {1} and pre_k(x, 2) = {1} => {y} = {1} )));
locals
  prev1 : int;
  prev2 : int;
states
  Init, Run;
init Init
trans
  Init -> Run {
    ensures {prev1} = {x};
    y := 0;
    prev1 := x;
  }
  Run -> Run {
    requires {prev1} = pre_k(x, 1);
    requires {prev2} = pre_k(x, 2);
    ensures {prev2} = pre_k(x, 1);
    ensures {prev1} = {x};
    if prev1 = 1 and prev2 = 1 then
      y := 1;
    else
      y := 0;
    end;
    prev2 := prev1;
    prev1 := x;
  }
end
